Refactor InventoryServiceImpl to use ResponseStatusException for better error handling; update tests accordingly
Co-authored-by: Copilot <copilot@github.com>